force-app/main/default/objects/Candidate__c/fields/Area_Of_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Area_Of_Expertise__c</fullName>
    <label>Area Of Expertise</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Sales&amp;Marketing</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>