force-app/main/default/objects/Candidate__c/fields/Degree_of_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Degree_of_Qualification__c</fullName>
    <label>Degree of Qualification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>B-Tech</fullName>
            </value>
            <value>
                <fullName>B-Sc</fullName>
            </value>
            <value>
                <fullName>M-Tech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>