force-app/main/default/objects/Candidate__c/fields/Experiance_in_years__c.field-meta.xml
<CustomField>
    <fullName>Experiance_in_years__c</fullName>
    <label>Experiance in years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>