force-app/main/default/objects/Candidate__c/fields/Higher_Secondary_Education__c.field-meta.xml
<CustomField>
    <fullName>Higher_Secondary_Education__c</fullName>
    <label>Higher Secondary Education</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>State board</fullName>
            </value>
            <value>
                <fullName>CBSE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>