force-app/main/default/objects/Candidate__c/fields/Lastname__c.field-meta.xml
<CustomField>
    <fullName>Lastname__c</fullName>
    <label>Lastname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>