force-app/main/default/objects/Candidate__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Andaman Nicobar</fullName>
            </value>
            <value>
                <fullName>Andhra Pradesh</fullName>
            </value>
            <value>
                <fullName>Arunanchal Pradesh</fullName>
            </value>
            <value>
                <fullName>Assam</fullName>
            </value>
            <value>
                <fullName>Bihar</fullName>
            </value>
            <value>
                <fullName>Chandigarh</fullName>
            </value>
            <value>
                <fullName>Chattisgarh</fullName>
            </value>
            <value>
                <fullName>Dadar &amp; Nagar Haveli</fullName>
            </value>
            <value>
                <fullName>Daman &amp; Diu</fullName>
            </value>
            <value>
                <fullName>Goa</fullName>
            </value>
            <value>
                <fullName>Gujarat</fullName>
            </value>
            <value>
                <fullName>Haryana</fullName>
            </value>
            <value>
                <fullName>Himachal Pradesh</fullName>
            </value>
            <value>
                <fullName>Jammu &amp; Kashmir</fullName>
            </value>
            <value>
                <fullName>Jharkhand</fullName>
            </value>
            <value>
                <fullName>Karnataka</fullName>
            </value>
            <value>
                <fullName>Kerala</fullName>
            </value>
            <value>
                <fullName>Lakshwdeep</fullName>
            </value>
            <value>
                <fullName>Madhya Pradesh</fullName>
            </value>
            <value>
                <fullName>Maharashtra</fullName>
            </value>
            <value>
                <fullName>Manipur</fullName>
            </value>
            <value>
                <fullName>Meghalaya</fullName>
            </value>
            <value>
                <fullName>Mizoram</fullName>
            </value>
            <value>
                <fullName>Nagaland</fullName>
            </value>
            <value>
                <fullName>New Delhi</fullName>
            </value>
            <value>
                <fullName>Orissa</fullName>
            </value>
            <value>
                <fullName>Pondicherry</fullName>
            </value>
            <value>
                <fullName>Punjab</fullName>
            </value>
            <value>
                <fullName>Rajasthan</fullName>
            </value>
            <value>
                <fullName>Sikkim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>