force-app/main/default/objects/Candidate__c/fields/XIIth_Mark__c.field-meta.xml
<CustomField>
    <fullName>XIIth_Mark__c</fullName>
    <label>XIIth Mark(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>