force-app/main/default/objects/Candidate__c/fields/Xth_education__c.field-meta.xml
<CustomField>
    <fullName>Xth_education__c</fullName>
    <label>Xth education</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>State board</fullName>
            </value>
            <value>
                <fullName>CBSE</fullName>
            </value>
            <value>
                <fullName>ICSE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>