force-app/main/default/objects/Candidate__c/fields/Xth_mark__c.field-meta.xml
<CustomField>
    <fullName>Xth_mark__c</fullName>
    <label>Xth mark(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>