force-app/main/default/objects/Candidate__c/validationRules/mobile_number.validationRule-meta.xml
<ValidationRule>
    <fullName>mobile_number</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(OR(REGEX(  mobile__c , &quot;[+91]{3}-[0-9]{10}&quot;)))</errorConditionFormula>
    <errorMessage>Enter &#39;+91-&#39; 10digit mobile number</errorMessage>
</ValidationRule>