force-app/main/default/objects/Candidate__c/validationRules/only_alphabets.validationRule-meta.xml
<ValidationRule>
    <fullName>only_alphabets</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(BEGINS(Name, &#39;lio&#39;))</errorConditionFormula>
    <errorMessage>show the error</errorMessage>
</ValidationRule>